--- a/style/index.css
+++ b/style/index.css
@@ -21,6 +21,18 @@ body {
   background-color: var(--grey);
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
 header {
   background-color: var(--dark-green);
   padding: 2rem;
@@ -31,6 +43,10 @@ header h1 {
   color: var(--blue);
   padding: 2rem 0 8rem;
   text-shadow: 0px 0px 3px var(--ligth-green);
+}
+
+header h1 strong {
+  color: var(--ligth-green);
 }
 
 #logo {
