--- a/style/index.css
+++ b/style/index.css
@@ -5,7 +5,7 @@
   --purple: #80a6f2;
   --blue: #3dd1f2;
   --dark-green: #012623;
-  --ligth-green: #87d90db7;
+  --ligth-green: #87d90d;
   --orange: #f28907;
   --white: #fff;
 }
@@ -15,6 +15,10 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+}
+
+html {
+  font-size: 93.75%;
 }
 
 body {
@@ -53,6 +57,25 @@ header h1 strong {
   font-weight: 200;
 }
 
+img {
+  width: 2rem;
+  height: 2rem;
+}
+
+a {
+  color: var(--dark-green);
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--ligth-green);
+}
+
+.button.new {
+  display: inline-block;
+  margin-bottom: 0.8rem;
+}
+
 .container {
   width: min(90vw, 800px);
   margin: auto;
@@ -84,6 +107,9 @@ h2 {
 .card h3 {
   font-weight: normal;
   font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card p {
@@ -94,6 +120,12 @@ h2 {
 .card.total {
   color: var(--white);
   background-color: var(--ligth-green);
+}
+
+#transactions {
+  display: block;
+  width: 100%;
+  overflow-x: auto;
 }
 
 #data-table {
@@ -127,6 +159,11 @@ table tbody tr td:first-child {
   border-radius: 0.25rem 0 0 0.25rem;
 }
 
+table thead tr th:last-child,
+table tbody tr td:last-child {
+  border-radius: 0 0.25rem 0.25rem 0;
+}
+
 td.description {
   color: var(--purple);
 }
@@ -139,9 +176,45 @@ td.expense {
   color: var(--orange);
 }
 
+.modal-overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal {
+  background-color: var(--grey);
+  padding: 2.4rem;
+  position: relative;
+}
+
 footer {
   text-align: center;
   padding: 4rem 0 2rem;
   color: var(--dark-green);
   opacity: 0.8;
+}
+
+@media (min-width: 800px) {
+  html {
+    font-size: 87.5%;
+  }
+
+  #balance {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+  }
 }
